# rust-os

./: .gitignore  Cargo.toml  README.md  build.sh  lorem.txt  os.ld  run.sh  user.ld
common/: README.md  double.tar  single.tar
common/src/: lib.rs  tar.rs
kernel/: Cargo.toml  README.md
kernel/src/: allocator.rs  constants.rs  dummy_procs.rs  main.rs  memory.rs  print.rs  process.rs  sbi.rs  tar.rs  trap.rs  virtio.rs
shell/: Cargo.toml  README.md
shell/src/: main.rs  print.rs  syscall.rs  user.rs
tarfile/: Cargo.toml  README.md
tarfile/src/: lib.rs
userlib/: Cargo.toml  README.md
userlib/src/: lib.rs  print.rs  syscall.rs
