[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
spin = "0.10.0"
common = { path = "../common" }
tarfile = { path = "../tarfile" }
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
